--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,10 +1,10 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
+{% block title %}{{ title }} | Админка{% endblock %}
 
 {% block branding %}
-    <h1 id="site-name">Вход для судей</h1>
+    <h1 id="site-name">Админка</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
