--- a/templates/player/create.html
+++ b/templates/player/create.html
@@ -1,4 +1,5 @@
 {% extends 'master_page.html' %}
+{% block title %}Добавить игрока{% endblock %}
 {% block content %}
 <div class="post">
     <h2 class="title">Добавить игрока</h2>
