--- a/templates/player/index.html
+++ b/templates/player/index.html
@@ -1,4 +1,5 @@
 {% extends 'master_page.html' %}
+{% block title %}Рейтинг игроков{% endblock %}
 {% block includes %}
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_PREFIX }}css/tablesorter/style.css">
