--- a/templates/master_page.html
+++ b/templates/master_page.html
@@ -4,7 +4,7 @@
     {% load static %}
     {% get_static_prefix as STATIC_PREFIX %}
     {% block includes %}
-        <link rel="stylesheet" href="{{ STATIC_PREFIX }}css/darkera.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="{{ STATIC_PREFIX }}css/main.css" type="text/css" media="screen" />
     {% endblock %}
     <title>
         {% block title %}{% endblock %} &mdash; Chess-Portal
@@ -53,8 +53,8 @@
                     <li><a href="http://www.fide.com/component/handbook/?id=86&view=article">
                         Система Бурштейна</a></li>
                     <li><a href="http://senseis.xmp.net/?GroupPairing">Группировка участников</a></li>
-                    <li><a href="#">Urnanet non molestie semper</a></li>
-                    <li><a href="#">Proin gravida orci porttitor</a></li>
+                    <li><a href="http://www.fide.com/component/handbook/?id=143&view=article">Общие правила</a></li>
+                    <li><a href="http://www.fide.com/component/handbook/?id=83&view=article">Система рейтинга</a></li>
                 </ul>
             </li>
         </ul>
