--- a/templates/tournament/ratings.html
+++ b/templates/tournament/ratings.html
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="post">
     <h2 class="title">Рейтинг игроков</h2>
+    <div class="entry">
     <table class="tablesorter">
         <thead>
         <tr>
@@ -23,7 +24,25 @@
         {% endfor %}
         </tbody>
     </table>
+    {% if info.has_previous or info.has_next %}
+    <div class="pagination">
+    <span class="step-links">
+        {% if info.has_previous %}
+            <a href="?page={{ info.previous_page_number }}">назад</a>
+        {% endif %}
+
+        <span class="current">
+            {{ info.number }} | {{ info.paginator.num_pages }}
+        </span>
+
+        {% if info.has_next %}
+            <a href="?page={{ info.next_page_number }}">вперед</a>
+        {% endif %}
+    </span>
+    </div>
+    {% endif %}
     <p><a href = "javascript:history.back()" class="button">Вернуться</a></p>
+    </div>
     </div>
 {% endblock %}
 
